--- a/src/Assignment1/pricingwebpage/index.css
+++ b/src/Assignment1/pricingwebpage/index.css
@@ -83,6 +83,8 @@ a {
   border-radius: 10px;
 }
 
+/* Styling */
+
 .main-container {
   width: 1300px;
   margin: 2rem auto;
@@ -94,22 +96,17 @@ a {
 }
 
 .container {
+  display: flex;
   position: absolute;
   width: 1150px;
-  height: 730px;
+  height: 750px;
   margin: 5.2rem 4.8rem;
+  padding: 2.9rem;
   background-color: #ffffff;
   border: none;
   border-radius: 45px;
 }
-
-.flex-container {
-  width: 1050px;
-  margin: 2.22rem auto;
-  height: 656px;
-  display: flex;
-}
-.flex-container .section-A {
+.container .section-A {
   background-color: rgb(105, 0, 180);
   width: 320px;
   border: none;
@@ -118,10 +115,10 @@ a {
   display: flex;
   flex-direction: column;
 }
-.flex-container .section-A .text-section {
+.container .section-A .text-section {
   margin: 2rem 2.5rem;
 }
-.flex-container .section-A .text-section p {
+.container .section-A .text-section p {
   color: #ffffff;
   font-size: 15px;
   line-height: 1.5;
@@ -129,18 +126,18 @@ a {
   margin-bottom: 1rem;
 }
 
-.flex-container .section-A .text-section .heading {
+.container .section-A .text-section .heading {
   font-size: 40px;
   line-height: normal;
   margin-bottom: 1.2rem;
 }
 
-.flex-container .section-A .img-section {
+.container .section-A .img-section {
   margin-top: 1.5rem;
   text-align: center;
 }
 
-.flex-container .section-B {
+.container .section-B {
   position: relative;
   height: 100%;
   width: 700px;
