--- a/src/Assignment4/Grid/index.css
+++ b/src/Assignment4/Grid/index.css
@@ -86,7 +86,7 @@ ul {
   margin: 0 1.7rem;
 }
 
-.headerContainer .headerRight{
+.headerContainer .headerRight {
   display: flex;
 }
 
@@ -197,7 +197,7 @@ ul {
 .sideBar {
   display: none;
   width: 600px;
-  margin-top: .8rem;
+  margin-top: 0.8rem;
 }
 
 .sideBar p {
@@ -258,15 +258,13 @@ ul {
   text-transform: uppercase;
 }
 
-
-@media screen and (min-width: 700px) and (max-width: 1000px) {
+@media screen and (min-width: 700px) {
   .headerContainer {
     display: none;
   }
   .cardsContainer {
     grid-template-columns: 1fr 1fr;
   }
-
   .contentContainer .toggle {
     display: block;
     width: 50px;
@@ -274,66 +272,39 @@ ul {
     margin-right: 50px;
     padding: 15px 12px;
   }
-
   .contentContainer .toggle .toggleLine {
     width: 25px;
     height: 3px;
     margin-top: 3px;
-    border-radius: 1px;
-    background-color: var(--cerulean);
   }
 }
 
-@media screen  and (min-width: 1001px) and (max-width:1400px){
-  .headerContainer{
-    display: none;
-  }
-  .sideBar{
-    display: block;
-  }
-
-  .mainContainer{
-    display: flex;
-  }
-
-  .contentContainer .sectionARight {
-    display: block;
-  }
-
-  .cardsContainer{
-    grid-template-columns:  1fr 1fr;
-  }
-
-  .cardsContainer .card{
-    padding-left: 20px;
-  }
-  
-}
-
-@media screen and (min-width: 1401px) {
-  .mainContainer {
-    display: flex;
-  }
-
+@media screen and (min-width: 1001px) {
   .sideBar {
     display: block;
   }
-
-  .contentContainer{
-    margin-top: 1rem;
+  .mainContainer {
+    display: flex;
   }
-
-  .contentContainer .sectionA h3{
-    font-size: 35px;
-    font-weight: 500;
-  }
-
   .contentContainer .sectionARight {
     display: block;
   }
-
-  .headerContainer {
+  .contentContainer .toggle {
     display: none;
+  }
+  .cardsContainer .card {
+    padding-left: 20px;
+  }
+}
+
+@media screen and (min-width: 1401px) {
+  .contentContainer {
+    margin-top: 1rem;
+  }
+
+  .contentContainer .sectionA h3 {
+    font-size: 35px;
+    font-weight: 500;
   }
 
   .cardsContainer {
