--- a/src/Assignment8/Assignment/index.css
+++ b/src/Assignment8/Assignment/index.css
@@ -49,7 +49,7 @@
   font-size: 30px;
 }
 
-.primaryColor{
+.primaryColor {
   color: #86c306;
   font-weight: bold;
 }
@@ -63,10 +63,10 @@
   padding: 0 1rem;
 }
 
-.formContainer .formInput{
+.formContainer .formInput {
   width: 75%;
   height: 70px;
-  margin: .5rem auto;
+  margin: 0.5rem auto;
 }
 
 .formContainer input {
@@ -78,10 +78,10 @@
   border-radius: 10px;
 }
 
-.error{
+.error {
   color: red;
   font-size: 14px;
-  margin-left: .3rem;
+  margin-left: 0.3rem;
 }
 
 input::placeholder {
@@ -99,6 +99,16 @@ input::placeholder {
 .btnSection .btn {
   width: 10rem;
   margin: 0 4.5rem;
+}
+
+.yes {
+  width: 5rem;
+  padding: 0.5rem 0;
+  background-color: rgb(180, 178, 178);
+}
+
+.yes:hover {
+  background-color: #86c306;
 }
 
 .Cancel {
@@ -123,18 +133,6 @@ input::placeholder {
   margin-bottom: 2rem;
 }
 
-.yes {
-  width: 5rem;
-  padding: 0.5rem 0;
-  background-color: rgb(180, 178, 178);
-}
-
-.yes:hover {
-  background-color: #86c306;
-}
-
-
-
 .tableContainer {
   width: 70%;
   margin: 5rem auto;
@@ -154,4 +152,47 @@ input::placeholder {
   font-size: 18px;
   font-weight: bold;
   color: #fff;
+}
+
+.tableContainer th:last-child,
+.tableContainer td:last-child {
+  width: 15rem;
+}
+
+.tablebtnSection {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+
+.tableBtn {
+  width: 35%;
+  background-color: #fff;
+  padding: 0.5rem 0.2rem;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 1px solid #000;
+}
+
+.tableBtn:hover {
+  background-color: #86c306;
+  color: white;
+  border: none;
+}
+
+.searchInput {
+  width: 100%;
+  padding: 1rem 2rem;
+  margin-bottom: 3rem;
+  border-radius: 10px;
+  font-size: 18px;
+}
+
+.searchInput::placeholder {
+  text-align: center;
+  font-size: 17px;
 }
